--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>OCR Tool for Business Documents </title>
   </head>
   <body>
@@ -25,7 +26,7 @@
             <input type="file" class="form-control-file" id="file-upload" accept="image/jpeg, image/png" />
             <small class="form-text text-muted">Only JPEG and PNG image files are allowed.</small>
           </div>
-          <button class="btn btn-primary btn-block mt-3" onclick="extractText()">
+          <button class="btn btn-primary btn-block mt-3" onclick="requestText()">
             Extract Text
           </button>
         </div>
@@ -33,15 +34,27 @@
     </div>
   </body>
   <script>
-    function extractText() {
-      fetch("http://localhost:8000/ocr")
-        .then(response => response.json())
-        .then(data => {
-          console.log(data);
-        })
-        .catch(error => {
-          console.error(error);
-        });
+    function requestText() {
+        const input = document.getElementById("file-upload");
+        const file = input.files[0];
+        const formData = new FormData();
+        formData.append("file", file);
+        fetch("http://localhost:8000/single_file_ocr", {
+            method: "POST",
+            body: formData,
+            headers: {
+                "Content-Type": "false",
+                "Cache-Control": "no-cache",
+                "Process-Data": "false"
+            }
+            })
+            .then(response => response.json())
+            .then(data => {
+                swal("Converted Text", data.text);
+            })
+            .catch(error => {
+                console.error(error);
+            });
     }
   </script>
 </html>
