closes #8, convert pdf in image before using it with pytesseract

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,8 +24,8 @@
         <div class="col-md-6 offset-md-3">
           <div class="form-group">
             <label for="file-upload">Upload Image:</label>
-            <input type="file" class="form-control-file" id="file-upload" accept="image/jpeg, image/png" multiple/>
-            <small class="form-text text-muted">Only JPEG and PNG image files are allowed.</small>
+            <input type="file" class="form-control-file" id="file-upload" accept="image/jpeg, image/png, application/pdf" multiple/>
+            <small class="form-text text-muted">Only JPEG, PNG and PDF files are allowed.</small>
           </div>
           <button class="btn btn-primary btn-block mt-3" onclick="requestText()">
             Extract Text
