--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,16 +13,44 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>OCR Tool for Business Documents </title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/tu-32x32.png">
+    <style>
+      .hidden {display: none;}
+    </style>
   </head>
   <body>
+  <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="/static/tu-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        Bachelor Thesis
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active" id="nav-convert">
+            <a class="nav-link" href="#" onclick="showForm('convert')">Convert</a>
+          </li>
+          <li class="nav-item" id="nav-evaluation">
+            <a class="nav-link" href="#" onclick="showForm('evaluation')">Evaluation</a>
+          </li>
+          <li class="nav-item" id="nav-experiment">
+            <a class="nav-link" href="#" onclick="showForm('experiment')">Experiment</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="container mt-5">
       <div class="row">
       </div>
       <h1 class="text-center">OCR Tool for Business Documents </h1>
       <h4 class="text-center mb-5">Improving Tesseract 5.0</h4>
       <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <!-- Convert form -->
+        <div id="convert-form" class="col-md-6 offset-md-3">
           <div class="form-group">
             <label for="file-upload">Upload Image:</label>
             <input type="file" class="form-control-file" id="file-upload" accept="image/jpeg, image/png, application/pdf" multiple/>
@@ -32,7 +60,9 @@
             Extract Text
           </button>
         </div>
-        <div class="col-md-6 offset-md-3 mt-5">
+
+        <!-- Evaluation form -->
+        <div id="evaluation-form" class="col-md-6 offset-md-3 hidden">
           <div class="form-group">
             <label for="file-upload-ocr">Upload Image:</label>
             <input type="file" class="form-control-file" id="file-upload-ocr" accept="image/jpeg, image/png, application/pdf" multiple/>
@@ -47,44 +77,96 @@
               Generate Text Metrics Report
           </button>
         </div>
+        <!-- Experiment form -->
+        <div id="experiment-form" class="col-md-6 offset-md-3 hidden">
+          <div class="form-group">
+            <label for="file-upload-ocr">Upload Image:</label>
+            <input type="file" class="form-control-file" id="file-upload-ocr-1" accept="image/jpeg, image/png, application/pdf" multiple/>
+            <small class="form-text text-muted">Only JPEG, PNG and PDF files are allowed.</small>
+          </div>
+          <div class="form-group">
+            <label for="file-upload-gt">Upload Ground Truth Text Files:</label>
+            <input type="file" class="form-control-file" id="file-upload-gt-1" accept=".txt" multiple/>
+            <small class="form-text text-muted">Only .txt files are allowed.</small>
+          </div>
+          <button class="btn btn-primary btn-block mt-3" onclick="runExperiment()">
+              Run Experiment
+          </button>
+        </div>
       </div>
     </div>
   </body>
   <script>
     function requestMetrics() {
-  const ocrInput = document.getElementById("file-upload-ocr");
-  const ocrFiles = ocrInput.files;
-  const gtInput = document.getElementById("file-upload-gt");
-  const gtFiles = gtInput.files;
-  const formData = new FormData();
+      const ocrInput = document.getElementById("file-upload-ocr");
+      const ocrFiles = ocrInput.files;
+      const gtInput = document.getElementById("file-upload-gt");
+      const gtFiles = gtInput.files;
+      const formData = new FormData();
 
-  if(ocrFiles.length === 0 || gtFiles.length === 0) {
-    swal("Error", "No text files provided", "error");
-  } else {
-      for(let file of ocrFiles) {
-          formData.append("ocr_files", file);
-      }
-      for(let file of gtFiles) {
-          formData.append("gt_files", file);
-      }
-
-      $.ajax({
-          type: 'POST',
-          url: '/evaluation',
-          data: formData,
-          contentType: false,
-          cache: false,
-          processData: false,
-          success: function(response) {
-              swal("Success", "Text metrics report has been generated");
-              let blob = new Blob([response]);
-              let link = document.createElement('a');
-              link.href = window.URL.createObjectURL(blob);
-              link.download = "text_metrics_report.csv";
-              link.click();
+      if(ocrFiles.length === 0 || gtFiles.length === 0) {
+        swal("Error", "No text files provided", "error");
+      } else {
+          for(let file of ocrFiles) {
+              formData.append("ocr_files", file);
           }
-      });
-  }
+          for(let file of gtFiles) {
+              formData.append("gt_files", file);
+          }
+
+          $.ajax({
+              type: 'POST',
+              url: '/evaluation',
+              data: formData,
+              contentType: false,
+              cache: false,
+              processData: false,
+              success: function(response) {
+                  swal("Success", "Text metrics report has been generated");
+                  let blob = new Blob([response]);
+                  let link = document.createElement('a');
+                  link.href = window.URL.createObjectURL(blob);
+                  link.download = "text_metrics_report.csv";
+                  link.click();
+              }
+          });
+      }
+    }
+
+    function runExperiment() {
+      const ocrInput = document.getElementById("file-upload-ocr-1");
+      const ocrFiles = ocrInput.files;
+      const gtInput = document.getElementById("file-upload-gt-1");
+      const gtFiles = gtInput.files;
+      const formData = new FormData();
+
+      if(ocrFiles.length === 0 || gtFiles.length === 0) {
+        swal("Error", "No text files provided", "error");
+      } else {
+          for(let file of ocrFiles) {
+              formData.append("ocr_files", file);
+          }
+          for(let file of gtFiles) {
+              formData.append("gt_files", file);
+          }
+
+          $.ajax({
+              type: 'POST',
+              url: '/experiment',
+              data: formData,
+              contentType: false,
+              cache: false,
+              processData: false,
+              success: function(response) {
+                  swal("Success", "Experiment report has been generated");
+                  let blob = new Blob([response]);
+                  let link = document.createElement('a');
+                  link.href = window.URL.createObjectURL(blob);
+                  link.download = "experiment_report.csv";
+                  link.click();
+              }
+          });
+      }
     }
 
     function requestText() {
@@ -121,5 +203,26 @@
         }
     });
 }
+
+    function showForm(formId) {
+      if(formId === 'convert'){
+        document.getElementById('convert-form').style.display = 'block';
+        document.getElementById('evaluation-form').style.display = 'none';
+        document.getElementById('experiment-form').style.display = 'none';
+      } else if(formId === 'evaluation') {
+        document.getElementById('evaluation-form').style.display = 'block';
+        document.getElementById('convert-form').style.display = 'none';
+        document.getElementById('experiment-form').style.display = 'none';
+      }
+      else if(formId === 'experiment') {
+        document.getElementById('experiment-form').style.display = 'block';
+        document.getElementById('convert-form').style.display = 'none';
+        document.getElementById('evaluation-form').style.display = 'none';
+      }
+    }
+    $('.navbar-nav .nav-link').click(function (e) {
+      $('.navbar-nav .nav-item').removeClass('active');
+      $(e.target).parent().addClass('active');
+    });
   </script>
 </html>
