--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,9 @@
           <li class="nav-item" id="nav-process-csv">
             <a class="nav-link" href="#" onclick="showForm('process-csv')">Process Experiment Results</a>
           </li>
+          <li class="nav-item" id="extract-features">
+            <a class="nav-link" href="#" onclick="showForm('extract-features')">Extract Image Features</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -113,6 +116,17 @@
           </div>
           <button class="btn btn-primary btn-block mt-3" onclick="processCSV()">
               Process Experiment
+          </button>
+        </div>
+        <!-- Feature Extraction form -->
+        <div id="feature-extraction-form" class="col-md-6 offset-md-3 hidden">
+          <div class="form-group">
+            <label for="file-upload">Upload Image:</label>
+            <input type="file" class="form-control-file" id="file-upload-fe" accept="image/jpeg, image/png, application/pdf" multiple/>
+            <small class="form-text text-muted">Only JPEG, PNG and PDF files are allowed.</small>
+          </div>
+          <button class="btn btn-primary btn-block mt-3" onclick="extractFeatures()">
+            Extract Features of Images
           </button>
         </div>
       </div>
@@ -256,7 +270,41 @@
           }
         }
     });
+  }
+
+ function extractFeatures() {
+  const input = document.getElementById("file-upload-fe");
+  const files = input.files;
+  const formData = new FormData();
+
+  if(files.length === 0) {
+    swal("Error", "No images provided", "error");
+    return;
+  }
+
+  // always add files to form data
+  for(let file of files) {
+      formData.append("images", file);
+  }
+
+  $.ajax({
+      type: 'POST',
+      url: '/extract_features',
+      data: formData,
+      contentType: false,
+      cache: false,
+      processData: false,
+      success: function(response) {
+        swal("Success", "Image features have been extracted");
+        let blob = new Blob([response]);
+        let link = document.createElement('a');
+        link.href = window.URL.createObjectURL(blob);
+        link.download = "features.csv";
+        link.click();
+      }
+  });
 }
+
 
     function showForm(formId) {
       if(formId === 'convert'){
@@ -264,12 +312,14 @@
         document.getElementById('evaluation-form').style.display = 'none';
         document.getElementById('experiment-form').style.display = 'none';
         document.getElementById('process-csv-form').style.display = 'none';
+        document.getElementById('feature-extraction-form').style.display = 'none';
 
       } else if(formId === 'evaluation') {
         document.getElementById('evaluation-form').style.display = 'block';
         document.getElementById('convert-form').style.display = 'none';
         document.getElementById('experiment-form').style.display = 'none';
         document.getElementById('process-csv-form').style.display = 'none';
+        document.getElementById('feature-extraction-form').style.display = 'none';
 
       }
       else if(formId === 'experiment') {
@@ -277,12 +327,25 @@
         document.getElementById('convert-form').style.display = 'none';
         document.getElementById('evaluation-form').style.display = 'none';
         document.getElementById('process-csv-form').style.display = 'none';
+        document.getElementById('feature-extraction-form').style.display = 'none';
+
       }
       else if(formId === 'process-csv') {
         document.getElementById('process-csv-form').style.display = 'block';
         document.getElementById('convert-form').style.display = 'none';
         document.getElementById('evaluation-form').style.display = 'none';
         document.getElementById('experiment-form').style.display = 'none';
+        document.getElementById('feature-extraction-form').style.display = 'none';
+
+      }
+
+      else if(formId === 'extract-features') {
+        document.getElementById('process-csv-form').style.display = 'none';
+        document.getElementById('convert-form').style.display = 'none';
+        document.getElementById('evaluation-form').style.display = 'none';
+        document.getElementById('experiment-form').style.display = 'none';
+        document.getElementById('feature-extraction-form').style.display = 'block';
+
       }
     }
     $('.navbar-nav .nav-link').click(function (e) {
